[CDAP-13180] Highlight newly added/edited prefs, and adds View All/View Less prefs labels in Namespace Details page - Also updates prefs on namespace details page, even if prefs were updated using the fast action on the namespace dropdown - Sorts prefs by keys by default in both namespace prefs modal and namespace details page, adds View All options, and highlights and scrolls to newly added prefs - Handles overflow values, and fixes saving empty preferences to the backend

--- a/cdap-ui/app/cdap/components/NamespaceDetails/Preferences/Preferences.scss
+++ b/cdap-ui/app/cdap/components/NamespaceDetails/Preferences/Preferences.scss
@@ -31,16 +31,18 @@ $link-color: #0275d8;
     width: 100%;
     table-layout: fixed;
 
-    tbody {
-      display: block;
-      overflow: auto;
-      max-height: calc(#{$tr-height} * 5);
-    }
-
     tr {
       border-bottom: 1px solid $grey-05;
+      border-top: 2px solid white;
+      border-left: 2px solid white;
+      border-right: 2px solid white;
       display: table;
       width: 100%;
+
+      &.highlighted {
+        border: 2px solid $green-03;
+        background-color: rgba($green-03, 0.1);
+      }
 
       th {
         border-top: 0;
@@ -63,5 +65,10 @@ $link-color: #0275d8;
         white-space: nowrap;
       }
     }
+  }
+
+  .view-more-label {
+    color: $link-color;
+    cursor: pointer;
   }
 }
